--- a/resources/recognize/app/package.json
+++ b/resources/recognize/app/package.json
@@ -12,7 +12,9 @@
     "bootstrap-vue": "^2.7.0",
     "core-js": "^3.6.4",
     "face-api.js": "^0.22.1",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-router": "^3.1.6",
+    "vuex": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
