--- a/resources/recognize/app/package.json
+++ b/resources/recognize/app/package.json
@@ -12,6 +12,8 @@
     "bootstrap-vue": "^2.7.0",
     "core-js": "^3.6.4",
     "face-api.js": "^0.22.1",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
